# wordle

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  Wordle.postman_collection.json  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
game/: apps.py  middleware.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
game/migrations/: 0001_initial.py  0002_game_code_game_player_alter_game_created_at_and_more.py  0002_remove_code_field.py  0003_game_is_win.py  0003_remove_anon_default.py  0004_add_player_foreign_key.py
match_making/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
match_making/migrations/: 0001_initial.py  0002_match_lives_per_player_match_winner_matchgame_and_more.py
users/: apps.py  models.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_account_matches_count.py
websocket/: consumers.py  routing.py  services.py
websocket/events/: disconnect.py  match.py  typing.py
wordle/: asgi.py  settings.py  urls.py  wsgi.py
