[project]
name = "wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "requests>=2.33.1",
    "ruff>=0.11.0",
    "black>=25.0.0",
    "mypy>=1.17.0",
]
